feat: novos recursos